--- a/assets-fa/styles/main.css
+++ b/assets-fa/styles/main.css
@@ -42,15 +42,23 @@ code {
 }
 
 /********************************************/
+div#header_full {
+	background: url(../images/header_bg.png) white;
+	height: 130px;
+}
+div#header_bar {
+	background: url(../images/header.png) white;
+	height: 130px;
+	width: 1000px;
+	margin: auto;
+}
 div#top_bar {
-	top: 0;
-	left: 0;
+	margin: auto;
 	padding: 0;
 	z-index: 40;
-	width: 100%;
+	width: 1000px;
 	height: 37px;
 	color: #f0f0f0;
-	position: fixed;
 	font-size: 14px;
 	background-color: #2c2c2c;
 	background-image: -moz-linear-gradient(top, #333333, #222222);
@@ -70,6 +78,34 @@ div#top_bar>div>a {
 	color: white;
 }
 
+div#menu_bar {
+	direction: rtl;
+	float: right;
+	padding: 0;
+	z-index: 40;
+	width: 180px;
+	height: 100%;
+	min-height:300px;
+	color: #f0f0f0;
+	font-size: 14px;
+	background-color: #2c2c2c;
+	background-image: -moz-linear-gradient(top, #333333, #222222);
+	background-image: -ms-linear-gradient(top, #333333, #222222);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
+	background-image: -webkit-linear-gradient(top, #333333, #222222);
+	background-image: -o-linear-gradient(top, #333333, #222222);
+	background-image: linear-gradient(top, #333333, #222222);
+	background-repeat: repeat-x;
+}
+
+div#menu_bar a {
+	text-decoration: none;
+}
+
+div#menu_bar>div>a {
+	color: white;
+}
+
 div#shj_logo {
 	float: right;
 	padding-left: 10px;
@@ -80,21 +116,21 @@ div#shj_logo {
 }
 
 div#shj_logo img {
-	height: 37px;
+	height: 32px;
 }
 
 div.top_object {
-	float: left;
 	height: 37px;
 	position: relative;
 	display: inline-block;
 	padding: 10px 10px 0 10px;
-	border-left: 1px solid #5d5b69;
 }
 
 div.top_object.top_left {
 	float: right;
-	border-right: 1px solid #5d5b69;
+}
+div.top_object.top_right {
+	float: right;
 }
 
 div.top_object.shj_menu {
@@ -122,15 +158,11 @@ span.time_label {
 }
 
 .top_menu {
-	right: 0;
-	top: 100%;
+	
 	color: black;
 	cursor: auto;
-	display: none;
 	padding: 10px;
 	font-size: 13px;
-	min-width: 180px;
-	position: absolute;
 	background-color: white;
 	text-align:right;
 	box-shadow: rgba(0, 0, 0, 0.27) 0 0 7px 3px;
@@ -166,15 +198,12 @@ div#extra_time {
 
 /*********************************************/
 div#side_bar {
-	right: 0;
-	top: 37px;
-	width: 180px;
-	bottom: 0;
+	width: 1000px;
+	height: 70px;
+	direction:rtl;
 	z-index: 1;
-	position: fixed;
 	/*background-color: #f0f0f0;*/
 	background: url(../images/sidebar_bg.png);
-	border-right: 1px solid #a3a3a3;
 	box-shadow: #a9a9a9 0 0 5px 2px;
 	-moz-box-shadow: #a9a9a9 0 0 5px 2px;
 	-webkit-box-shadow: #a9a9a9 0 0 5px 2px;
@@ -188,24 +217,22 @@ div#side_bar ul {
 
 div#side_bar ul li {
 	font-size: 14px;
+	height: 70px;
 	padding: 10px 0 10px 10px;
+	display: inline-block;
 }
 
 div#side_bar ul li:hover {
 	background-color: rgba(0, 44, 51, 0.2);
-	border-right: 5px solid #9c9c9c;
 }
 
 div#side_bar ul li.selected {
 	font-weight: bold;
 	background-color: rgba(0, 44, 51, 0.3);
-	border-right: 5px solid #4f4f4f;
 }
 
 .sidebar_text {
-	margin-left: 5px;
-	width: 145px;
-	position: absolute;
+	
 }
 
 div#side_bar ul a {
@@ -213,11 +240,9 @@ div#side_bar ul a {
 }
 
 div#sidebar_bottom {
-	bottom: 0;
 	z-index: 2;
 	width: 100%;
 	padding: 0;
-	position: absolute;
 }
 
 div#sidebar_bottom p {
@@ -234,8 +259,18 @@ div#shj_collapse {
 	-moz-box-shadow: rgba(0, 0, 0, 0.7) 0 0 5px;
 	padding: 7px 0 7px 12px;
 }
+div.side_box {
+	width: 85px;
+	display: inline-block;
+	text-align: center;
+	vertical-align: top;
+}
 
 /*********************************************/
+div#main_step {
+	width: 1000px;
+	margin: auto;
+}
 
 div#main_container {
 	z-index: -1;
