--- a/assets-fa/styles/main.css
+++ b/assets-fa/styles/main.css
@@ -218,7 +218,7 @@ div#side_bar ul {
 div#side_bar ul li {
 	font-size: 14px;
 	height: 70px;
-	padding: 10px 0 10px 10px;
+	padding: 10px;
 	display: inline-block;
 }
 
